// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell: structure activated settings 1`] = `
<div
  class="style_cell__3Ra6O style_is-configuring__1N8Wb"
  style="width:25%;height:25%"
/>
`;

exports[`Cell: structure active state 1`] = `
<div
  class="style_cell__3Ra6O style_is-active__2i7UK"
  style="width:50%;height:50%"
/>
`;

exports[`Cell: structure custom size 1`] = `
<div
  class="style_cell__3Ra6O"
  style="width:25%;height:75%"
/>
`;

exports[`Cell: structure default component 1`] = `
<div
  class="style_cell__3Ra6O"
  style="width:25%;height:25%"
/>
`;

exports[`Cell: structure inner container class name 1`] = `
<div
  class="useful style_content__1ERGj"
>
  content
</div>
`;

exports[`Cell: structure with children 1`] = `
<div
  class="style_cell__3Ra6O style_is-configuring__1N8Wb"
  style="width:50%;height:50%"
>
  <article
    class="style_container__1ANRY"
  >
    <header
      class="style_header__3dpY1"
    />
    <div
      class="style_inner__1FGTU"
    >
      <div
        class="style_content__1ERGj"
      >
        contents
      </div>
      <aside
        class="style_settings__3Nr_n"
      >
        <h4>
          Settings
        </h4>
      </aside>
    </div>
  </article>
</div>
`;
